--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -17,7 +17,7 @@
 <body>
     <div class="card card-default mt-2">
         <div class="card-header">
-            <h2 class="text-center">Импортирани Мерения</h2>
+            <h2 class="text-center">Фактуриране - СТП</h2>
         </div>
         <div class="card-body">
             <form action="" method="GET">
