--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -209,9 +209,15 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a id="invoicing-readings-href" href="/users/invoicing" class="nav-link">
+                                    <a id="invoicing-stp-href" href="/users/invoicing-stp" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Импортирани мерения</p>
+                                        <p>СТП</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a id="invoicing-hourly-href" href="/users/invoicing-hourly" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Почасови</p>
                                     </a>
                                 </li>
                             </ul>
