Add excise duty
Add excise duty for hourly invoices

--- a/views/invoicing/list-readings-hourly.ejs
+++ b/views/invoicing/list-readings-hourly.ejs
@@ -75,6 +75,7 @@
                     <th>От дата</th>
                     <th>До дата</th>
                     <th>Потребление (MW)</th>
+                    <th>Акциз (лв)</th>
                     <th>Вид ЕРП</th>
                 </tr>
             </thead>
