Modify invoice by STP
Add new fields in the invoice by STP

--- a/views/invoicing/list-readings-hourly.ejs
+++ b/views/invoicing/list-readings-hourly.ejs
@@ -67,7 +67,7 @@
                 </form>
             </div>
         </div>
-        <table id="invoices-hourly" class="display text-center">
+        <table id="invoices-hourly" class="display text-center invisible">
             <thead>
                 <tr>
                     <th>Идентификационен код</th>
