--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,12 +55,12 @@
                             <a class="nav-link" data-widget="pushmenu" href="#"><i id="hmg-icon"
                                     class="fas fa-times"></i></a>
                         </li>
-                        
+
                     </ul>
             </div>
             <div class="col-md-6 mt-3">
                 <!-- SEARCH FORM -->
-              <!--   <form class="form-inline ml-3">
+                <!--   <form class="form-inline ml-3">
                     <div class="input-group input-group-sm">
                         <input class="form-control form-control-navbar" type="search" placeholder="Search"
                             aria-label="Search">
@@ -126,6 +126,12 @@
                                     <a href="/users/import/invoicing" class="nav-link">
                                         <i class="fas fa-file-upload nav-icon"></i>
                                         <p>Фактуриране</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/users/import/exchange-prices" class="nav-link">
+                                        <i class="fas fa-file-upload nav-icon"></i>
+                                        <p>Борсови цени</p>
                                     </a>
                                 </li>
                             </ul>
@@ -196,8 +202,8 @@
                         </li>
                         <li class="nav-item">
                             <a id="profiles-href" href="/users/profiles" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Профили</p>
+                                <i class="fas fa-grip-horizontal"></i>
+                                <p>&nbspПрофили</p>
                             </a>
                         </li>
                         <li class="nav-item has-treeview">
@@ -216,11 +222,17 @@
                                 </li>
                                 <li class="nav-item">
                                     <a id="invoicing-hourly-href" href="/users/invoicing-hourly" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Почасови</p>
+                                        <i class="fas fa-clock pl-1"></i>
+                                        <p>&nbsp Почасови</p>
                                     </a>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a id="exchange-price-href" href="/users/exchange-prices" class="nav-link">
+                                <i class="fas fa-exchange-alt"></i>
+                                <p>Борсови цени</p>
+                            </a>
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
@@ -233,26 +245,26 @@
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a id="inquiry-readings-href" href="/users/inquiry/readings" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fas fa-file-alt"></i>
                                         <p>Мерене</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a id="inquiry-graphs-href" href="/users/inquiry/graphs" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fas fa-chart-line"></i>
                                         <p>Графици</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a id="inquiry-imbalances-href" href="/users/inquiry/imbalances" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fas fa-balance-scale"></i>
                                         <p>Небаланси</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a id="inquiry-missing-information-href" href="/users/inquiry/missing-information"
                                         class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fas fa-scroll"></i>
                                         <p>Липсваща информация</p>
                                     </a>
                                 </li>
