--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -58,16 +58,11 @@
                 </div>
                 <hr>
                 <div class="row justify-content-center"><button type="submit" id="search"
-                        class="btn-primary btn-lg ml-3">Търсене</button></div>
+                        class="btn-primary btn-lg mr-3">Търсене</button>
+                        <button id="invoiceBTN" class="btn-warning btn-lg">Фактуриране</button>
+                    </div>
             </form>
         </div>
-    </div>
-    <div class="row justify-content-around mb-3">
-        <button id="preview-readings" class="btn-success btn-lg">
-            Преглед
-        </button>
-        <button id="invoiceBTN" class="btn-warning btn-lg">Фактуриране</button>
-        <button id="select-rows" class="btn-primary btn-lg">Селектиране на всички редове</button>
     </div>
     <hr>
     <table id="list-readings" class="invisible display">
@@ -82,6 +77,7 @@
                 <th>Сума нощна</th>
                 <th>Сума върхова</th>
                 <th>Сума единична</th>
+                <th>Общо</th>
                 <th>Акциз</th>
                 <th>Мощност</th>
                 <th>ЕРП</th>
