--- a/views/clients/clients-eso-info.ejs
+++ b/views/clients/clients-eso-info.ejs
@@ -74,11 +74,15 @@
                     </div>
                     
                     <div class="row justify-content-center">
-                        <label class="col-md-4 ml-2">Производител</label>
-
+                        <label>Производител</label>
                         <div class="squaredThree">
-                            <input type="checkbox" value="None" id="squaredThree" name="check" />
-                            <label for="squaredThree"></label>
+                            <input type="checkbox" id="producer" name="producer" />
+                            <label for="producer"></label>
+                        </div>
+                        <label>Стопански</label>
+                        <div class="squaredThree">
+                            <input type="checkbox" id="business" name="business" />
+                            <label for="business"></label>
                         </div>
                     </div>
                     
