New views, APIs for client groups

--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -84,6 +84,7 @@
         <tbody id="tBody">
         </tbody>
     </table>
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/clients/clients.js"></script>
 </body>
 
