--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -136,11 +136,28 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item"> <a href="/users/clients" class="nav-link">
-                                <i class="fas fa-users"></i>
-                                <p class="ml-2"> Клиенти</p>
+                        <li class="nav-item has-treeview">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-user-friends"></i>
+                                <p>
+                                    Клиенти
+                                    <i class="fas fa-angle-left right"></i>
+                                </p>
                             </a>
-                        </li>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a id="clients-href" href="/users/clients" class="nav-link">
+                                        <i class="fas fa-users"></i>
+                                        <p>Клиенти</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a id="clients-groups-href" href="/users/groups" class="nav-link">
+                                        <i class="fas fa-users-cog"></i>
+                                        <p>Клиентски групи</p>
+                                    </a>
+                                </li>
+                            </ul>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
                                 <i class="fas fa-file-alt"></i>
