--- a/views/clients/clients-eso-info.ejs
+++ b/views/clients/clients-eso-info.ejs
@@ -68,24 +68,23 @@
                         <label class="col-md-4">Тип мерене</label>
                         <input name="metering_type" class="col-md-7" disabled />
                     </div>
-                    <div class="row">
-                        <label class="col-md-4">ЕРП Тип</label>
-                        <input list="profilesID" name="erp_type" class="col-md-7" disabled />
-                    </div>
-                    
+
                     <div class="row justify-content-center">
-                        <label>Производител</label>
-                        <div class="squaredThree">
-                            <input type="checkbox" id="producer" name="producer" />
-                            <label for="producer"></label>
+                        <div class="checkbox-mr">
+                            <label>Производител</label>
+                            <span class="squaredThree ml-3">
+                                <input type="checkbox" id="producer" name="producer" />
+                                <label for="producer"></label>
+                            </span>
                         </div>
-                        <label>Стопански</label>
-                        <div class="squaredThree">
-                            <input type="checkbox" id="business" name="business" />
-                            <label for="business"></label>
+                        <div class="checkbox-mr">
+                            <label>Стопански</label>
+                            <span class="squaredThree ml-3">
+                                <input type="checkbox" id="business" name="business" />
+                                <label for="business"></label>
+                            </span>
                         </div>
                     </div>
-                    
                     <button onclick="goBack()" class="btn-lg btn-success pull-right ">Върни се</button>
                     <button class="btn-lg btn-warning pull-right mr-5 mb-2">Запази</button>
                 </div>
