--- a/views/clients/clients-info.ejs
+++ b/views/clients/clients-info.ejs
@@ -74,15 +74,19 @@
                         <input list="profilesID" name="erp_type" class="col-md-7" disabled />
                     </div>
                     <div class="row justify-content-center">
-                        <label>Производител</label>
-                        <div class="squaredThree">
-                            <input type="checkbox" id="producer" name="producer" />
-                            <label for="producer"></label>
+                        <div class="checkbox-mr">
+                            <label>Производител</label>
+                            <span class="squaredThree ml-3">
+                                <input type="checkbox" id="producer" name="producer" />
+                                <label for="producer"></label>
+                            </span>
                         </div>
-                        <label>Стопански</label>
-                        <div class="squaredThree">
-                            <input type="checkbox" id="business" name="business" />
-                            <label for="business"></label>
+                        <div class="checkbox-mr">
+                            <label>Стопански</label>
+                            <span class="squaredThree ml-3">
+                                <input type="checkbox" id="business" name="business" />
+                                <label for="business"></label>
+                            </span>
                         </div>
                     </div>
 
