--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -47,6 +47,10 @@
                         <input type="checkbox" name="erp_type" value="energoPRO" id="energoPRO" checked>
                         <span>ЕнергоПРО</span>
                     </label>
+                    <label class="checkbox">
+                        <input type="checkbox" name="erp_type" value="ESO" id="ESO" checked>
+                        <span>ЕСО</span>
+                    </label>
                     <span class="mr-2 ml-5 mt-3 text-heading">Вид мерене:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="metering_type" id="stp" value="stp" checked>
